# telerembash

./: pyproject.toml  setup.py
telerembash/artifacts/: service-prepare.bash.template
