[project]
name = "telerembash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "aiogram==2.12.1",
    "coloredlogs==15.0",
    "py-params",
    "pyotp==2.6.0",
    "python-daemon==2.3.0",
    "pyyaml==6.0.3",
    "qrcode==6.1",
]

[tool.uv.sources]
py-params = { git = "https://github.com/dillonarcuity/py-params.git" }

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "docutils>=0.22.4",
    "nose>=1.3.7",
    "nose-exclude>=0.5.0",
    "pycodestyle>=2.14.0",
    "twine>=6.2.0",
    "wheel>=0.46.3",
]

[project.scripts]
telerem = "telerembash.cli:main"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
